--- a/AI_Assignment_Report.tex
+++ b/AI_Assignment_Report.tex
@@ -10,11 +10,11 @@
 \usepackage{amsmath}
 \graphicspath{{C:\Users\tkhal\Desktop\College\Second Yr\Data Analysis EE201\Project\Question 2}}
 
-\title{Data Analysis Project Report \\ Question 2}
+\title{AI Assignment Report}
 \vspace{20pt}
 \vspace{20pt}
 \date{\today}
-\author{Tabish Khalid Halim , \\ 200020049}
+\author{Tabish Khalid Halim , \\ 200020049 \\ Anand Hegde , \\ 200020007}
 \vspace{20pt}
 \affil{Department of Computer Science, IIT Dharwad}
 \begin{document}
@@ -26,7 +26,7 @@
 
 \newpage
 \pagenumbering{arabic}
-\section*{Project Statement :}
+\section*{Problem Statement :}
 \textbf{(25 points)It’s still about coin toss:}You have been given the data (50000 samples) of arandom  variableZ.   You  know  that $Z=X+ 10Y$,  where X is a uniform  random  variable between -3 and 3.  You also know that 
 $$ Y = \sum_{i = 1}^{k} W_i $$
 where $ k \in {2,3,4}$ , $W_i$ are independent and identically distributed (i.i.d.)  and belong to oneof the following:
