--- a/AI_Assignment_Report.tex
+++ b/AI_Assignment_Report.tex
@@ -60,8 +60,8 @@ Along with applying the above algorithms for the PacMan , we have also set the p
 \vspace{20pt}
 \begin{itemize}
     \item \textbf{goal\_state(i,j,graph\_input)} : This function determines whether the coordinate (i,j) is the end goal for the PacMan or not .
-    \item \textbf{move\_gen(i,j,graph\_input)} : This function's task is returning all possible moves available to the pacman
-    , if the adjecent block has a space(' ') or astrik('*') 
+    \item \textbf{move\_gen(i,j,graph\_input)} : This function's task is returning all \\possible moves available to the PacMan
+    , if the adjecent block has a space\\(' ') or astrik('*') 
     , funtion returns its coordinates .
     \item \textbf{DFSUtil(v, visited,parent,graph\_input,open\_list)} : This is the recursive DFS Utility function .
     \item \textbf{DFS(graph\_input,v=(0,0))} : The function to do DFS traversal. It uses recursive DFSUtil()- dfs utility function .
