--- a/AI_Assignment_Report.tex
+++ b/AI_Assignment_Report.tex
@@ -14,7 +14,7 @@
 \vspace{20pt}
 \vspace{20pt}
 \date{\today}
-\author{Tabish Khalid Halim , \\ 200020049 \\ Anand Hegde , \\ 200020007}
+\author{Team -14 \\Tabish Khalid Halim , \\ 200020049 \\ Anand Hegde , \\ 200020007}
 \vspace{20pt}
 \affil{Department of Computer Science, IIT Dharwad}
 \begin{document}
@@ -123,6 +123,7 @@ def move\_gen(i,j,graph\_input):
 \vspace{5pt}
 Based on observation , we have plotted the following time vs size of maze graph for BFS and DFS .
 \vspace{20pt}
+\\\includegraphics[scale=0.3]{time.jpg}
 \\By far , we have observed that DFID is the slowest initially but potentially more better for bigger mazes .
 \newpage
 \section{Results}
@@ -130,8 +131,19 @@ Based on observation , we have plotted the following time vs size of maze graph 
 The following conclusions have been made after evaluation of my program : 
 \begin{enumerate}
     \item The Output for the first test case :
+    \\\includegraphics{Output1.jpg}
     \item The Output for the second test case :
+    \\\includegraphics{Output2.jpg}
+\newpage
     \item The Output for the third test case :
+    \\\includegraphics{Output3.jpg}
+    \item The Output for the fourth test case :
+    \\\includegraphics{Output4.jpg}
+\newpage
+    \item The Output for the fifth test case :
+    \\\includegraphics{Output5.jpg}
+    \item The Output for the sixth test case :
+    \\\includegraphics{Output6.jpg}
 \end{enumerate}
 \vspace{20pt}
 \subsection*{Conclusion}
@@ -143,5 +155,6 @@ The following conclusions have been made after evaluation of my program :
     \item \url{http://geeksforgeeks.com}
     \item \url{https://wikipedia.org}
     \item \url{https://stackoverflow.com}
+    \item \url{http://www.delorie.com/game-room/mazes/genmaze.cgi}
 \end{itemize}
 \end{document}
