--- a/AI_Assignment_Report.tex
+++ b/AI_Assignment_Report.tex
@@ -125,6 +125,10 @@ Based on observation , we have plotted the following time vs size of maze graph 
 \vspace{20pt}
 \\\includegraphics[scale=0.3]{time.jpg}
 \\By far , we have observed that DFID is the slowest initially but potentially more better for bigger mazes .
+\vspace{20pt}
+\\Here is the following table depicting the dependence of no. of states and path length on priority order [U : Up, D : Down , R : Right, L :Left].
+\vspace{10pt}
+\\\includegraphics{table.jpg}
 \newpage
 \section{Results}
 \vspace{20pt}
